# Aegisub

./: .gitignore  meson.build
src/: auto4_lua.cpp
subprojects/: boost.wrap  libass.wrap  lua.wrap
subprojects/packagefiles/boost/: fix-dependent-name-lookup-in-core-arch-ops-msvc-arm-hpp.patch
subprojects/packagefiles/libpng/: meson.build
subprojects/packagefiles/lua/: meson.build
subprojects/packagefiles/lua/src/: meson.build
